# table_rag

./: .env.example  .gitignore  README.md  basic_rag.py  create_complex_table_pdf.py  pyproject.toml  qdrant.txt  rag_agent.py  requirements.txt  streamlit_app.py  진행과정.md  진행순서.txt
.streamlit/: config.toml
app/: rag_agent.py  streamlit_app.py
table_rag/: __init__.py  __main__.py  config.py  indexing.py  models.py  qa.py  retrieval.py
table_rag/document/: __init__.py  pdf_loader.py  pptx_loader.py
table_rag/table/: __init__.py  extractor.py  merger.py  normalizer.py  serializer.py
tools/: pdf_to_pptx.py
